--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
-  <title>Imersão Dev Gemini</title>
+  <title>Mundo dos games</title>
 </head>
 <body>
   <header>
